--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
     "@angular/core": "~9.0.3",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.3",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
-    "firebase": "^7.15.0",
+    "firebase": "^7.15.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
