--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "bubbly": "^1.1.2",
     "rxjs": "~6.5.4",
+    "three": "^0.117.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
