--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "file-system": "^2.2.2",
     "firebase": "^7.15.1",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.15",
     "p5": "^1.0.0",
     "rxjs": "~6.5.4",
